build/sm/kube.yaml
apiVersion: v1
kind: Service
metadata:
  name: strategy-manager
  labels:
    app: strategy-manager
    service: strategy-manager
spec:
  ports:
    - port: 22590
      name: admin
    - port: 18760
      name: grpc
  selector:
    app: strategy-manager
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: strategy-manager-v1
  labels:
    app: strategy-manager
    version: v1
spec:
  selector:
    matchLabels:
      app: strategy-manager
      version: v1
  replicas: 3
  template:
    metadata:
      labels:
        app: strategy-manager
        version: v1
    spec:
      serviceAccountName: strategy-manager
      containers:
        - name: strategy-manager
          image: houyitracing/strategy-manager
          imagePullPolicy: Always
          ports:
            - containerPort: 22590
            - containerPort: 18760
          volumeMounts:
            - name: tmp
              mountPath: /tmp
      volumes:
        - name: tmp
          emptyDir: { }
---
