build/sm/istio.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: strategy-manager
spec:
  hosts:
    - strategy-manager
  tcp:
    - match:
        - port: 18760
      route:
        - destination:
            host: strategy-manager
            port:
              number: 18760
            subset: v1
    - match:
        - port: 22650
      route:
        - destination:
            host: strategy-manager
            port:
              number: 22650
            subset: v1
---

apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: strategy-manager
spec:
  host: strategy-manager
  subsets:
    - name: v1
      labels:
        version: v1
---
